# argus

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
Formula/: argus.rb
install/: argus.service  com.voidwire.argus.plist  info.voidwire.argus.plist
src/argus/: __init__.py  cli.py  config.py  database.py  models.py  server.py  websocket.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_events_api.py  test_query_api.py  test_websocket.py
tests/unit/: __init__.py  test_config.py
web/: app.js  index.html  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  vite.config.ts
web-svelte/: index.html  mockup-timeline.html  vite.config.ts
web-svelte/src/: App.svelte  app.css  vite-env.d.ts
web-svelte/src/lib/components/: AgentSwimlanes.svelte  CombinedTimeline.svelte  DetailPanel.svelte  EventTable.svelte  FilterBar.svelte  MetricsBar.svelte  SessionTree.svelte  StatusBadge.svelte  Timeline.svelte  TypeBadge.svelte
web-svelte/src/lib/stores/: events.svelte.ts  filters.svelte.ts  metrics.svelte.ts  sessions.svelte.ts  timeline.svelte.ts  websocket.svelte.ts
web-vanilla/: app.js
web/assets/: index-2a85VRgJ.js  index-2a85VRgJ.js.map  index-B-10XiIy.js  index-B-10XiIy.js.map  index-BJCOjM1K.js  index-BJCOjM1K.js.map  index-BY4z_DiS.css  index-BeemD4xn.js  index-BeemD4xn.js.map  index-BlaRTKgE.js  index-BlaRTKgE.js.map  index-BoMOHVeb.css  index-BpEEcjIZ.js  index-BpEEcjIZ.js.map  index-DHgsSeJi.css  index-DYkk6uHi.css  index-DyypCkaV.js  index-DyypCkaV.js.map
web/src/: app.css
